bluec-tests/tests/invalid/stmt_loops/static_for_decl.c
int main(void) {
    for (static int i = 0; i < 10; ++i) {

    }
    return 0;
}
